// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorDate renders a single author 1`] = `
<div
  className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
>
  <div
    className="sc-bdVaJa etviRx"
  >
    By 
    Molly Gottschalk
  </div>
  <div
    className="sc-bdVaJa etviRx"
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;

exports[`AuthorDate renders multiple authors 1`] = `
<div
  className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
>
  <div
    className="sc-bdVaJa etviRx"
  >
    By 
    Molly Gottschalk and Kana Abe
  </div>
  <div
    className="sc-bdVaJa etviRx"
  >
    May 19, 2017 9:09 am
  </div>
</div>
`;

exports[`Standard Header renders standard header properly 1`] = `
<div
  className="file__StandardHeaderContainer-s2se43n-0 boYBoN"
>
  <div
    className="file__Vertical-s2se43n-1 bTpUdq"
  >
    Art Market
  </div>
  <div
    className="file__StandardTitle-s11f72yx-0 fuOrQk"
  >
    New York's Next Art District
  </div>
  <div
    className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
  >
    <div
      className="sc-bdVaJa etviRx"
    >
      By 
      Artsy Editorial
    </div>
    <div
      className="sc-bdVaJa etviRx"
    >
      May 19, 2017 9:09 am
    </div>
  </div>
</div>
`;

exports[`feature renders feature full header properly 1`] = `
<div
  className="sc-bZQynM kCQbJ"
  data-type="fullscreen"
>
  <div>
    <div
      className="sc-ifAKCX eaHLCC"
      src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
    />
    <div
      className="sc-bwzfXH gWZoXy"
    />
  </div>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lgiuiy-1 ftamvt"
      >
        Creativity
      </div>
      <div
        className="feature__title file__FeatureTitle-s11f72yx-1 gloyPr"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="file__SubHeader-lgiuiy-5 kUaTMN"
      >
        <div
          className="feature__deck file__Deck-s11f72yx-2 hKriWr"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
        >
          <div
            className="sc-bdVaJa lfBMjK"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="sc-bdVaJa lfBMjK"
          >
            Jun 29, 2017 11:00 am
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature split header properly 1`] = `
<div
  className="sc-bZQynM kCQbJ"
  data-type="split"
>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lgiuiy-1 ftamvt"
      >
        Creativity
      </div>
      <div
        className="feature__title file__FeatureTitle-s11f72yx-1 gloyPr"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="sc-ifAKCX eaHLCC"
        src="https://artsy-media-uploads.s3.amazonaws.com/ZR0wtJhg5Nez7Vm8uCP8Nw%2FDSC_0720-Edit-2.jpg"
      />
      <div
        className="file__SubHeader-lgiuiy-5 kUaTMN"
      >
        <div
          className="feature__deck file__Deck-s11f72yx-2 hKriWr"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
        >
          <div
            className="sc-bdVaJa etviRx"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="sc-bdVaJa etviRx"
          >
            Jun 29, 2017 11:00 am
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`feature renders feature text header properly 1`] = `
<div
  className="sc-bZQynM kCQbJ"
  data-type="text"
>
  <div
    className="sc-htpNat gziOsG"
  >
    <div
      className="sc-bxivhb jzEeHb"
    >
      <div
        className="file__Vertical-lgiuiy-1 ftamvt"
      >
        Creativity
      </div>
      <div
        className="feature__title file__FeatureTitle-s11f72yx-1 gloyPr"
      >
        What’s the Path to Winning an Art Prize?
      </div>
      <div
        className="file__SubHeader-lgiuiy-5 kUaTMN"
      >
        <div
          className="feature__deck file__Deck-s11f72yx-2 hKriWr"
        >
          Nulla vitae elit libero, a pharetra augue. Vestibulum id ligula porta felis euismod semper.
        </div>
        <div
          className="file__AuthorDateContainer-hox9tl-0 kHGfOU"
        >
          <div
            className="sc-bdVaJa etviRx"
          >
            By 
            Casey Lesser
          </div>
          <div
            className="sc-bdVaJa etviRx"
          >
            Jun 29, 2017 11:00 am
          </div>
        </div>
      </div>
    </div>
    <img
      className="file__Image-lgiuiy-3 ddMYNZ"
      src="https://artsy-media-uploads.s3.amazonaws.com/YqTtwB7AWqKD95NGItwjJg%2FRachel_Rossin_portrait_2.jpg"
    />
  </div>
</div>
`;
